Implement CI pipeline

--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -1,17 +1,20 @@
-server.port = 8889
-
 # jdbc.X
-fi.livi.vkm.jdbc.driverClassName=oracle.jdbc.pool.OracleDataSource
-fi.livi.vkm.jdbc.url=DB_JDBC_URL
-fi.livi.vkm.jdbc.user=DB_JDBC_CRED_USR
-fi.livi.vkm.jdbc.pass=DB_JDBC_CRED_PSW
+fi.livi.vkm.jdbc.driverClassName=com.oracle.jdbc.pool.OracleDataSource
+fi.livi.vkm.jdbc.url=DB_VKM_URL
+fi.livi.vkm.jdbc.user=DB_VKM_CRED_USR
+fi.livi.vkm.jdbc.pass=DB_VKM_CRED_PSW
 
 # jdbc.tr
-fi.livi.vkm.jdbc.tr.driverClassName=oracle.jdbc.pool.OracleDataSource
+jdbc.tr.driverClassName=com.oracle.jdbc.pool.OracleDataSource
 fi.livi.vkm.jdbc.tr.url=DB_TR_URL
 fi.livi.vkm.jdbc.tr.user=DB_TR_CRED_USR
-fi.livi.vkm.jdbc.tr.password=DB_TR_CRED_PSW
+fi.livi.vkm.jdbc.tr.pass=DB_TR_CRED_PSW
+
 
 # hibernate.X
 fi.livi.vkm.hibernate.dialect=org.hibernate.spatial.dialect.oracle.OracleSpatial10gDialect
-fi.livi.vkm.hibernate.show_sql=true
+fi.livi.vkm.hibernate.show_sql=false
+
+server.port = 8889
+server.context-path=/vkm-api
+logging.file=./logs/vkm-api.log
