--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -1,10 +1,10 @@
 import groovy.json.JsonOutput
 
 def get_environment() {
-    return 'dev'
+    if (BRANCH_NAME.equals("jenkinsfile-temp")) { return "dev" }
     if (BRANCH_NAME.equals("develop")) { return "dev" }
-    //if (BRANCH_NAME.equals("master")) { return "prod" }
-    //if (BRANCH_NAME.startsWith("release-")) { return "test" }
+    if (BRANCH_NAME.equals("master")) { return "prod" }
+    if (BRANCH_NAME.startsWith("release-")) { return "test" }
     return ""
 }
 
@@ -13,41 +13,21 @@ def get_pollSCM_trigger() {
     return ""
 }
 
-def get_robotframework_dmz() {
-    if (get_environment().equals("dev")) {
-        return [
-          "https://kehitysjulkinen.liikennevirasto.fi"
-        ]
-    }
-    if (get_environment().equals("prod")) {
-        return [
-          "https://julkinen.liikennevirasto.fi",
-          "http://oag.liikennevirasto.fi"
-        ]
-    }
-    if (get_environment().equals("test")) {
-      return [
-        "https://testijulkinen.liikennevirasto.fi",
-        "http://testioag.liikennevirasto.fi"
-      ]
-    }
-    return []
-}
-
 def get_version(version) {
-    if (get_environment().equals("dev")) { return "${version}-SNAPSHOT" }
-    if (get_environment().equals("prod")) { return "${version}" }
-    if (get_environment().equals("test")) { return "${version}-RC-SNAPSHOT" }
-    return "${version}-${get_environment().toUpperCase()}-SNAPSHOT"
+    def version_xyz = version.tokenize('-').first()
+    if (get_environment().equals("dev")) { return "${version_xyz}-SNAPSHOT" }
+    if (get_environment().equals("prod")) { return "${version_xyz}" }
+    if (get_environment().equals("test")) { return "${version_xyz}-RC-SNAPSHOT" }
+    return "${version_xyz}-${get_environment().toUpperCase()}-SNAPSHOT"
 }
 
 pipeline {
     agent any
     environment {
-        DB_JDBC_URL = credentials("db-jdbc-url-prod")
-        DB_JDBC_CRED = credentials("db-jdbc-cred-prod")
-        DB_TR_URL = credentials("db-tr-jdbc-url-prod")
-        DB_TR_CRED = credentials("db-tr-jdbc-cred-prod")
+        DB_VKM_URL = credentials("DB_VKM_URL")
+        DB_VKM_CRED = credentials("DB_VKM_CRED")
+        DB_TR_URL = credentials("DB_TR_URL")
+        DB_TR_CRED = credentials("DB_TR_CRED")
         NOTIFY_SLACK_SUBJECT = "${JOB_NAME} - <${RUN_DISPLAY_URL}|${BUILD_DISPLAY_NAME}>"
     }
     options {
@@ -85,15 +65,17 @@ pipeline {
                         choice(choices: group_id, description: "Group ID", name: "group_id")
                     ]
 
-                    def config = "src/main/resources/application-ci.properties"
+                    def config_source = "src/main/resources/application-ci.properties"
+                    def config = "src/main/resources/application.properties"
 
                     STAGE_BUILD_CMD = [
-                        "sed -i 's/DB_JDBC_CRED_USR/${env.DB_JDBC_CRED_USR}/g' ${config}",
-                        "sed -i 's/DB_JDBC_CRED_PSW/${env.DB_JDBC_CRED_PSW}/g' ${config}",
-                        "sed -i 's/DB_JDBC_URL/${env.DB_JDBC_URL}/g' ${config}",
+                        "cp ${config_source} ${config}",
+                        "sed -i 's/DB_VKM_CRED_USR/${env.DB_VKM_CRED_USR}/g' ${config}",
+                        "sed -i 's/DB_VKM_CRED_PSW/${env.DB_VKM_CRED_PSW}/g' ${config}",
+                        "sed -i 's|DB_VKM_URL|${env.DB_VKM_URL}|g' ${config}",
                         "sed -i 's/DB_TR_CRED_USR/${env.DB_TR_CRED_USR}/g' ${config}",
                         "sed -i 's/DB_TR_CRED_PSW/${env.DB_TR_CRED_PSW}/g' ${config}",
-                        "sed -i 's/DB_TR_URL/${env.DB_TR_URL}/g' ${config}",
+                        "sed -i 's|DB_TR_URL|${env.DB_TR_URL}|g' ${config}",
                         [
                             "mvn",
                             "-f", "pom.xml",
@@ -183,7 +165,7 @@ pipeline {
                 }
             }
             steps {
-                sh "cp /data1/ci/{maven,python}/* ci/confs/"
+                sh "cp /data1/ci/maven/* ci/confs/"
                 script {
                     def jenkins_uid = sh(returnStdout: true, script: "id -u").trim()
                     def build_args = [
@@ -196,11 +178,35 @@ pipeline {
                         "ptpapp-vkm-api-maven",
                         "${build_args} -f ci/Dockerfile.maven ci"
                     )
-                    docker.build(
-                        "ptpapp-vkm-api-python",
-                        "${build_args} -f ci/Dockerfile.python ci"
+                }
+            }
+            post {
+                failure {
+                    slackSend(
+                        color: "danger",
+                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
                     )
                 }
+            }
+        }
+        stage("Prepare") {
+            agent {
+                docker {
+                    image "ptpapp-vkm-api-maven"
+                    reuseNode true
+                }
+            }
+            when {
+                expression {
+                    get_environment()?.equals("dev")
+                }
+            }
+            steps {
+                build(
+                    job: "ptpapp/vkm-api/component-vkm-core/jenkinsfile-temp",
+                    propagate: true,
+                    wait: true
+                )
             }
             post {
                 failure {
