--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>fi.livi.vkm</groupId>
       <artifactId>vkm-core</artifactId>
-      <version>[0.0.1,1.0.0)</version>
+      <version>0.3.2-SNAPSHOT</version>
     </dependency>
    <dependency>
        <groupId>org.geotools</groupId>
