--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -6,9 +6,9 @@ fi.livi.vkm.jdbc.pass=DB_VKM_CRED_PSW
 
 # jdbc.tr
 jdbc.tr.driverClassName=com.oracle.jdbc.pool.OracleDataSource
-fi.livi.vkm.jdbc.tr.url=DB_TR_URL
-fi.livi.vkm.jdbc.tr.user=DB_TR_CRED_USR
-fi.livi.vkm.jdbc.tr.pass=DB_TR_CRED_PSW
+fi.livi.tr.jdbc.tr.url=DB_TR_URL
+fi.livi.tr.jdbc.tr.user=DB_TR_CRED_USR
+fi.livi.tr.jdbc.tr.pass=DB_TR_CRED_PSW
 
 
 # hibernate.X
