Updated CI setup

--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -34,6 +34,13 @@ pipeline {
         buildDiscarder(logRotator(numToKeepStr: "25"))
         disableConcurrentBuilds()
     }
+    parameters {
+        choice(
+            choices: "service-deploy-springboot\nservice-restart\nservice-start\nservice-stop",
+            description: "Action to execute.",
+            name: "action"
+        )
+    }
     triggers {
         pollSCM(get_pollSCM_trigger())
     }
@@ -49,7 +56,7 @@ pipeline {
 
                     def pom = readMavenPom(file: 'pom.xml')
 
-                    def deploy_target = get_environment()
+                    def target_environment = get_environment()
 
                     def artifact_id = pom.artifactId
                     def artifact_version = get_version(pom.version)
@@ -59,10 +66,8 @@ pipeline {
                     def repository_url = "http://livibuild03.vally.local/nexus/repository/ptp"
 
                     STAGE_ACK_PARAMETERS = [
-                        choice(choices: deploy_target, description: "Deploy target.", name: "deploy_target"),
-                        choice(choices: artifact_id, description: "Artifact ID", name: "artifact_id"),
-                        choice(choices: artifact_version, description: "Artifact version", name: "artifact_version"),
-                        choice(choices: group_id, description: "Group ID", name: "group_id")
+                        choice(choices: target_environment, description: "Deploy target.", name: "target_environemnt"),
+						choice(choices: params.action, description: "Action", name: action)
                     ]
 
                     def config_source = "src/main/resources/application-ci.properties"
@@ -103,23 +108,40 @@ pipeline {
                         "-Durl=${repository_url}",
                         "--batch-mode"
                     ].join(" ")
-
-                    STAGE_DEPLOY_PLAYBOOK = [
+                    
+					STAGE_ANSIBLE_PARAMETERS = [
                         inventory: "/data1/ansible/inventories/ptpapp",
                         playbook: "/data1/ansible/ptpapp.yml",
                         vaultCredentialsId: "vaultpass-ptp",
-                        tags: "service-deploy-springboot",
-                        extraVars: [
-                            ptpapp_target: get_environment(),
-                            ptpapp_deploy_springboot: JsonOutput.toJson([
-                                artifact_id: artifact_id,
-                                group_id: group_id,
-                                extension: extension,
-                                version: artifact_version,
-                                repository_url: repository_url
-                            ])
-                        ]
-                    ]
+                        tags: params.action
+					]
+
+					def ansible_extravars = [
+						ptpapp_service_springboot: artifact_id,
+						ptpapp_target: get_environment()
+					]
+
+					if (params.action.equals("service-deploy-springboot")) {
+
+                        STAGE_ACK_PARAMETERS.addAll([
+							choice(choices: artifact_id, description: "Artifact ID", name: "artifact_id"),
+	                        choice(choices: artifact_version, description: "Artifact version", name: "artifact_version"),
+    	                    choice(choices: group_id, description: "Group ID", name: "group_id")
+						])
+
+						def ansible_deploy = [
+							artifact_id: artifact_id,
+							extension: extension,
+							group_id: group_id,
+							repository_url: repository_url,
+							version: artifact_version
+						]
+
+						ansible_extravars.put("ptpapp_deploy_springboot", JsonOutput.toJson(ansible_deploy)
+
+					}
+
+					STAGE_ANSIBLE_PARAMETERS.put("extraVars", ansible_extravars)
                 }
             }
         }
@@ -293,14 +315,14 @@ pipeline {
                 }
             }
         }
-        stage("Deploy") {
+        stage("Ansible") {
             when {
                 expression {
                     get_environment()?.trim()
                 }
             }
             steps {
-                ansiblePlaybook(STAGE_DEPLOY_PLAYBOOK)
+                ansiblePlaybook(STAGE_ANSIBLE_PARAMETERS)
             }
             post {
                 failure {
