--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -97,7 +97,7 @@ pipeline {
                         ].join(" ")
                     ].join(" && ")
 
-                    STAGE_CONFIRM_TEXT = "Create release ${group_id}:${artifact_id}@${artifact_version} and deploy to ${deploy_target}?"
+                    STAGE_CONFIRM_TEXT = "Create release ${group_id}:${artifact_id}@${artifact_version} and deploy to ${target_environment}?"
 
                     STAGE_PUBLISH_CMD = [
                         "mvn",
