--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -222,7 +222,7 @@ pipeline {
             }
             steps {
                 build(
-                    job: "ptpapp/vkm-api/component-vkm-core/jenkinsfile-temp",
+                    job: "ptpapp/vkm-api/component-vkm-core/${BRANCH_NAME}",
                     propagate: true,
                     wait: true
                 )
