--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -34,6 +34,13 @@ pipeline {
         buildDiscarder(logRotator(numToKeepStr: "25"))
         disableConcurrentBuilds()
     }
+    parameters {
+        choice(
+            choices: "service-deploy-springboot\nservice-restart\nservice-start\nservice-stop",
+            description: "Action to execute.",
+            name: "action"
+        )
+    }
     triggers {
         pollSCM(get_pollSCM_trigger())
     }
@@ -47,9 +54,9 @@ pipeline {
             steps {
                 script {
 
-                    def pom = readMavenPom(file: 'pom.xml')
+                    def pom = readMavenPom()
 
-                    def deploy_target = get_environment()
+                    def target_environment = get_environment()
 
                     def artifact_id = pom.artifactId
                     def artifact_version = get_version(pom.version)
@@ -59,10 +66,8 @@ pipeline {
                     def repository_url = "http://livibuild03.vally.local/nexus/repository/ptp"
 
                     STAGE_ACK_PARAMETERS = [
-                        choice(choices: deploy_target, description: "Deploy target.", name: "deploy_target"),
-                        choice(choices: artifact_id, description: "Artifact ID", name: "artifact_id"),
-                        choice(choices: artifact_version, description: "Artifact version", name: "artifact_version"),
-                        choice(choices: group_id, description: "Group ID", name: "group_id")
+                        choice(choices: target_environment, description: "Environment", name: "target_environemnt"),
+                        choice(choices: params.action, description: "Action", name: "action")
                     ]
 
                     def config_source = "src/main/resources/application-ci.properties"
@@ -70,12 +75,12 @@ pipeline {
 
                     STAGE_BUILD_CMD = [
                         "cp ${config_source} ${config}",
-                        "sed -i 's/DB_VKM_CRED_USR/${env.DB_VKM_CRED_USR}/g' ${config}",
-                        "sed -i 's/DB_VKM_CRED_PSW/${env.DB_VKM_CRED_PSW}/g' ${config}",
-                        "sed -i 's|DB_VKM_URL|${env.DB_VKM_URL}|g' ${config}",
-                        "sed -i 's/DB_TR_CRED_USR/${env.DB_TR_CRED_USR}/g' ${config}",
-                        "sed -i 's/DB_TR_CRED_PSW/${env.DB_TR_CRED_PSW}/g' ${config}",
-                        "sed -i 's|DB_TR_URL|${env.DB_TR_URL}|g' ${config}",
+                        "sed -i 's|DB_VKM_CRED_USR|${DB_VKM_CRED_USR}|g' ${config}",
+                        "sed -i 's|DB_VKM_CRED_PSW|${DB_VKM_CRED_PSW}|g' ${config}",
+                        "sed -i 's|DB_VKM_URL|${DB_VKM_URL}|g' ${config}",
+                        "sed -i 's|DB_TR_CRED_USR|${DB_TR_CRED_USR}|g' ${config}",
+                        "sed -i 's|DB_TR_CRED_PSW|${DB_TR_CRED_PSW}|g' ${config}",
+                        "sed -i 's|DB_TR_URL|${DB_TR_URL}|g' ${config}",
                         [
                             "mvn",
                             "-f", "pom.xml",
@@ -92,7 +97,7 @@ pipeline {
                         ].join(" ")
                     ].join(" && ")
 
-                    STAGE_CONFIRM_TEXT = "Create release ${group_id}:${artifact_id}@${artifact_version} and deploy to ${deploy_target}?"
+                    STAGE_CONFIRM_TEXT = "Create release ${group_id}:${artifact_id}@${artifact_version} and deploy to ${target_environment}?"
 
                     STAGE_PUBLISH_CMD = [
                         "mvn",
@@ -104,22 +109,38 @@ pipeline {
                         "--batch-mode"
                     ].join(" ")
 
-                    STAGE_DEPLOY_PLAYBOOK = [
+                    STAGE_ANSIBLE_PARAMETERS = [
                         inventory: "/data1/ansible/inventories/ptpapp",
                         playbook: "/data1/ansible/ptpapp.yml",
                         vaultCredentialsId: "vaultpass-ptp",
-                        tags: "service-deploy-springboot",
-                        extraVars: [
-                            ptpapp_target: get_environment(),
-                            ptpapp_deploy_springboot: JsonOutput.toJson([
-                                artifact_id: artifact_id,
-                                group_id: group_id,
-                                extension: extension,
-                                version: artifact_version,
-                                repository_url: repository_url
-                            ])
-                        ]
+                        tags: params.action
                     ]
+                    
+                    def ansible_extravars = [
+                        ptpapp_service_springboot: artifact_id,
+                        ptpapp_target: get_environment()
+                    ]
+                    
+                    if (params.action.equals("service-deploy-springboot")) {
+
+                        STAGE_ACK_PARAMETERS.addAll([
+                            choice(choices: artifact_id, description: "Artifact ID", name: "artifact_id"),
+                            choice(choices: artifact_version, description: "Artifact version", name: "artifact_version"),
+                            choice(choices: group_id, description: "Group ID", name: "group_id")
+                        ])
+                        
+                        def ansible_deploy = [
+                            artifact_id: artifact_id,
+                            extension: extension,
+                            group_id: group_id,
+                            repository_url: repository_url,
+                            version: artifact_version
+                        ]
+                        
+                        ansible_extravars.put("ptpapp_deploy_springboot", JsonOutput.toJson(ansible_deploy))
+                    
+                    }
+                    STAGE_ANSIBLE_PARAMETERS.put("extraVars", ansible_extravars)
                 }
             }
         }
@@ -129,14 +150,16 @@ pipeline {
                 timeout(time: 5, unit: "MINUTES")
             }
             when {
+                beforeAgent true
                 expression {
-                    get_environment()?.trim() && !get_pollSCM_trigger().trim()
+                    (get_environment()?.trim() && !get_pollSCM_trigger().trim()) ||
+                    (get_environment()?.trim() && !params.action.equals("service-deploy-springboot"))
                 }
             }
             steps {
                 slackSend(
                     color: "warning",
-                    message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} requires acknowledgement! Visit <${RUN_DISPLAY_URL}|here> and verify!"
+                    message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} requires acknowledgement! Visit <${RUN_DISPLAY_URL}|here> and verify!"
                 )
                 input(
                     message: "Proceed with following settings?",
@@ -147,21 +170,22 @@ pipeline {
                 aborted {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} aborted because acknowledgement timeout exceeded or user action!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} aborted because acknowledgement timeout exceeded or user action!"
                     )
                 }
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} aborted! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} aborted! Check <${BUILD_URL}console|console>!"
                     )
                 }
             }
         }
         stage("Docker") {
             when {
+                beforeAgent true
                 expression {
-                    get_environment()?.trim()
+                    get_environment()?.trim() && params.action.equals("service-deploy-springboot")
                 }
             }
             steps {
@@ -184,26 +208,21 @@ pipeline {
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
                     )
                 }
             }
         }
         stage("Prepare") {
-            agent {
-                docker {
-                    image "ptpapp-vkm-api-maven"
-                    reuseNode true
-                }
-            }
             when {
+                beforeAgent true
                 expression {
-                    get_environment()?.equals("dev")
+                    get_environment()?.trim() && params.action.equals("service-deploy-springboot")
                 }
             }
             steps {
                 build(
-                    job: "ptpapp/vkm-api/component-vkm-core/jenkinsfile-temp",
+                    job: "ptpapp/vkm-api/component-vkm-core/${BRANCH_NAME}",
                     propagate: true,
                     wait: true
                 )
@@ -212,7 +231,7 @@ pipeline {
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
                     )
                 }
             }
@@ -225,8 +244,9 @@ pipeline {
                 }
             }
             when {
+                beforeAgent true
                 expression {
-                    get_environment()?.trim()
+                    get_environment()?.trim() && params.action.equals("service-deploy-springboot")
                 }
             }
             steps {
@@ -236,7 +256,7 @@ pipeline {
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
                     )
                 }
             }
@@ -249,13 +269,13 @@ pipeline {
             when {
                 beforeAgent true
                 expression {
-                    get_environment().equals("prod")
+                    get_environment().equals("prod") && params.action.equals("service-deploy-springboot")
                 }
             }
             steps {
                 slackSend(
                     color: "warning",
-                    message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} requires confirmation! Visit <${RUN_DISPLAY_URL}|here> and verify!"
+                    message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} requires confirmation! Visit <${RUN_DISPLAY_URL}|here> and verify!"
                 )
                 input STAGE_CONFIRM_TEXT
             }
@@ -263,13 +283,13 @@ pipeline {
                 aborted {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} aborted because confirmation timeout exceeded or user action!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} aborted because confirmation timeout exceeded or user action!"
                     )
                 }
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
                     )
                 }
             }
@@ -284,7 +304,7 @@ pipeline {
             when {
                 beforeAgent true
                 expression {
-                    get_environment()?.trim()
+                    get_environment()?.trim() && params.action.equals("service-deploy-springboot")
                 }
             }
             steps {
@@ -294,36 +314,57 @@ pipeline {
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
                     )
                 }
             }
         }
-        stage("Deploy") {
+        stage("Ansible") {
             when {
                 expression {
                     get_environment()?.trim()
                 }
             }
             steps {
-                ansiblePlaybook(STAGE_DEPLOY_PLAYBOOK)
+                ansiblePlaybook(STAGE_ANSIBLE_PARAMETERS)
             }
             post {
                 failure {
                     slackSend(
                         color: "danger",
-                        message: "${env.NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                        message: "${NOTIFY_SLACK_SUBJECT}\nStage ${STAGE_NAME} failure! Check <${BUILD_URL}console|console>!"
+                    )
+                }
+            }
+        }
+        stage("Test") {
+            when {
+                expression {
+                    get_environment()?.trim() && !params.action.equals("service-stop")
+                }
+            }
+            steps {
+                build(
+                    job: "ptpapp/vkm-api/test/${BRANCH_NAME}",
+                    propagate: false,
+                    wait: params.action.endsWith("start") ? true : false
+                )
+            }
+            post {
+                failure {
+                    slackSend(
+                        color: "danger",
+                        message: "${NOTIFY_SLACK_SUBJECT} - Stage ${STAGE_NAME} failure!\nCheck <${BUILD_URL}console|console>!"
                     )
                 }
             }
         }
     }
-
     post {
         always {
             slackSend(
                 color: currentBuild.currentResult.equals("SUCCESS") ? "good" : "danger",
-                message: "${env.NOTIFY_SLACK_SUBJECT}\nJob ${currentBuild.currentResult}! More info <${BUILD_URL}|here>."
+                message: "${NOTIFY_SLACK_SUBJECT}\nJob ${currentBuild.currentResult}! More info <${BUILD_URL}|here>."
             )
             deleteDir()
         }
