moved tr calls to core and added them to other searches too, fixed tieosoite to not require palautusarvot parameter

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,9 @@
 # Root logger option
-log4j.rootLogger=WARN, file
+log4j.rootLogger=DEBUG, CONSOLE
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
