Fixing search and return with tilannepvm and kohdepvm

--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -6,9 +6,9 @@ fi.livi.vkm.jdbc.pass=DB_VKM_CRED_PSW
 
 # jdbc.tr
 fi.livi.tr.jdbc.driverClassName=com.oracle.jdbc.pool.OracleDataSource
-fi.livi.tr.jdbc.url=DB_TR_URL
-fi.livi.tr.jdbc.user=DB_TR_CRED_USR
-fi.livi.tr.jdbc.pass=DB_TR_CRED_PSW
+fi.livi.tr.jdbc.tr.url=DB_TR_URL
+fi.livi.tr.jdbc.tr.user=DB_TR_CRED_USR
+fi.livi.tr.jdbc.tr.pass=DB_TR_CRED_PSW
 
 
 # hibernate.X
@@ -17,4 +17,5 @@ fi.livi.vkm.hibernate.show_sql=false
 
 server.port = 8889
 server.context-path=/vkm-api
-logging.file=./logs/vkm-api.log
+logging.file=./logs/vkm-api.logJoo K
+
