--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
       <artifactId>jackson-datatype-jts</artifactId>
       <version>2.2</version>
     </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.datatype</groupId>
+    	<artifactId>jackson-datatype-jsr310</artifactId>
+	</dependency>
    <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
