--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
       <version>2.8.5</version>
       <scope>compile</scope>
     </dependency>
+     <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+	</dependency>
 
   </dependencies>
 
