--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -24,8 +24,11 @@ def get_version(version) {
 pipeline {
     agent any
     environment {
-        DB_VKM_URL = credentials("DB_VKM_URL")
-        DB_VKM_CRED = credentials("DB_VKM_CRED")
+    	DB_VKM_URL = "jdbc:oracle:thin:@lividwr01n1L.vally.local:1521/ptjtest"
+        DB_VKM_CRED_USR = "ptk"
+        DB_VKM_CRED_PSW = "maalis21"
+        //DB_VKM_URL = credentials("DB_VKM_URL")
+        //DB_VKM_CRED = credentials("DB_VKM_CRED")
         DB_TR_URL = credentials("DB_TR_URL")
         DB_TR_CRED = credentials("DB_TR_CRED")
         NOTIFY_SLACK_SUBJECT = "${JOB_NAME} - <${RUN_DISPLAY_URL}|${BUILD_DISPLAY_NAME}>"
