--- a/bin/src/main/resources/application-ci.properties
+++ b/bin/src/main/resources/application-ci.properties
@@ -16,6 +16,6 @@ fi.livi.vkm.hibernate.dialect=org.hibernate.spatial.dialect.oracle.OracleSpatial
 fi.livi.vkm.hibernate.show_sql=false
 
 server.port = 8889
-server.context-path=/vkm-api
+server.context-path=/viitekehysmuunnin
 logging.file=./logs/vkm-api.logJoo K
 
