--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -2,7 +2,7 @@ import groovy.json.JsonOutput
 
 def get_environment() {
     if (BRANCH_NAME.equals("jenkinsfile-temp")) { return "dev" }
-    if (BRANCH_NAME.equals("develop")) { return "dev" }
+    if (BRANCH_NAME.equals("test")) { return "dev" }
     if (BRANCH_NAME.equals("master")) { return "prod" }
     if (BRANCH_NAME.startsWith("release-")) { return "test" }
     return ""
@@ -222,7 +222,7 @@ pipeline {
             }
             steps {
                 build(
-                    job: "ptpapp/vkm-api/component-vkm-core/${BRANCH_NAME}",
+                    job: "ptpapp/viitekehysmuunnin/component-vkm-core/${BRANCH_NAME}",
                     propagate: true,
                     wait: true
                 )
@@ -345,7 +345,7 @@ pipeline {
             }
             steps {
                 build(
-                    job: "ptpapp/vkm-api/test/${BRANCH_NAME}",
+                    job: "ptpapp/viitekehysmuunnin/test/${BRANCH_NAME}",
                     propagate: false,
                     wait: params.action.endsWith("start") ? true : false
                 )
