--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -15,7 +15,7 @@ fi.livi.tr.jdbc.tr.pass=DB_TR_CRED_PSW
 fi.livi.vkm.hibernate.dialect=org.hibernate.spatial.dialect.oracle.OracleSpatial10gDialect
 fi.livi.vkm.hibernate.show_sql=false
 
-server.port = 8889
-server.context-path=/vkm-api
+server.port = 8989
+server.context-path=/viitekehysmuunnin
 logging.file=./logs/vkm-api.logJoo K
 
