--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,5 +1,5 @@
-server.port = 8889
-server.context-path=/vkm-api
+server.port = 8989
+server.context-path=/viitekehysmuunnin
 logging.file=./logs/vkm-api.log
 
 # jdbc.X
