--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>fi.livi.ptp</groupId>
-  <artifactId>vkm-api</artifactId>
+  <artifactId>viitekehysmuunnin</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
-  <name>vkm-api</name>
-  <description>vkm-api</description>
+  <name>viitekehysmuunnin</name>
+  <description>viitekehysmuunnin</description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
