--- a/bin/ci/Jenkinsfile.service
+++ b/bin/ci/Jenkinsfile.service
@@ -222,7 +222,7 @@ pipeline {
             }
             steps {
                 build(
-                    job: "ptpapp/vkm-api/component-vkm-core/${BRANCH_NAME}",
+                    job: "ptpapp/viitekehysmuunnin/component-vkm-core/${BRANCH_NAME}",
                     propagate: true,
                     wait: true
                 )
@@ -239,7 +239,7 @@ pipeline {
         stage("Build") {
             agent {
                 docker {
-                    image "ptpapp-vkm-api-maven"
+                    image "ptpapp-viitekehysmuunnin-maven"
                     reuseNode true
                 }
             }
@@ -297,7 +297,7 @@ pipeline {
         stage("Publish") {
             agent {
                 docker {
-                    image "ptpapp-vkm-api-maven"
+                    image "ptpapp-viitekehysmuunnin-maven"
                     reuseNode true
                 }
             }
