--- a/bin/src/main/resources/application-ci.properties
+++ b/bin/src/main/resources/application-ci.properties
@@ -17,5 +17,5 @@ fi.livi.vkm.hibernate.show_sql=false
 
 server.port = 8989
 server.context-path=/viitekehysmuunnin
-logging.file=./logs/vkm-api.logJoo K
+logging.file=./logs/viitekehysmuunnin.logJoo K
 
