--- a/bin/src/main/resources/application.properties.sample
+++ b/bin/src/main/resources/application.properties.sample
@@ -1,6 +1,6 @@
 server.port = 8989
 server.context-path=/viitekehysmuunnin
-logging.file=./logs/vkm-api.log
+logging.file=./logs/viitekehysmuunnin.log
 
 # jdbc.X
 fi.livi.vkm.jdbc.driverClassName=oracle.jdbc.OracleDriver
