--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -2,9 +2,9 @@ import groovy.json.JsonOutput
 
 def get_environment() {
     if (BRANCH_NAME.equals("jenkinsfile-temp")) { return "dev" }
-    if (BRANCH_NAME.equals("test")) { return "dev" }
-    if (BRANCH_NAME.equals("prod")) { return "prod" }
-    if (BRANCH_NAME.startsWith("version-")) { return "test" }
+    if (BRANCH_NAME.equals("kehitys")) { return "dev" }
+    if (BRANCH_NAME.equals("tuotanto")) { return "prod" }
+    if (BRANCH_NAME.startsWith("testiversio-")) { return "test" }
     return ""
 }
 
