testing url path

--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -16,6 +16,6 @@ fi.livi.vkm.hibernate.dialect=org.hibernate.spatial.dialect.oracle.OracleSpatial
 fi.livi.vkm.hibernate.show_sql=false
 
 server.port = 8989
-server.context-path=/viitekehysmuunnin
+server.context-path=/
 logging.file=./logs/viitekehysmuunnin.logJoo K
 
