--- a/bin/src/main/resources/application.properties.sample
+++ b/bin/src/main/resources/application.properties.sample
@@ -1,5 +1,5 @@
 server.port = 8989
-server.context-path=/viitekehysmuunnin
+server.context-path=
 logging.file=./logs/viitekehysmuunnin.log
 
 # jdbc.X
