--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -22,22 +22,22 @@ def get_version(version) {
 }
 
 def get_database_url() {
-	if (get_environment().equals("dev")) { return ""DB_VKM_TEST_URL"" }
-	if (get_environment().equals("test")) { return ""DB_VKM_TEST_URL"" }
-	if (get_environment().equals("prod")) { return ""DB_VKM_PROD_URL"" }
+	if (get_environment().equals("dev")) { return credentials("DB_VKM_TEST_URL") }
+	if (get_environment().equals("test")) { return credentials("DB_VKM_TEST_URL") }
+	if (get_environment().equals("prod")) { return credentials("DB_VKM_PROD_URL") }
 }
 
 def get_database_cred() {
-	if (get_environment().equals("dev")) { return ""DB_VKM_TEST_CRED"" }
-	if (get_environment().equals("test")) { return ""DB_VKM_TEST_CRED"" }
-	if (get_environment().equals("prod")) { return ""DB_VKM_PROD_CRED"" }
+	if (get_environment().equals("dev")) { return credentials("DB_VKM_TEST_CRED") }
+	if (get_environment().equals("test")) { return credentials("DB_VKM_TEST_CRED") }
+	if (get_environment().equals("prod")) { return credentials("DB_VKM_PROD_CRED") }
 }
 
 pipeline {
     agent any
     environment {
-        DB_VKM_URL = credentials(get_database_url())
-        DB_VKM_CRED = credentials(get_database_cred())
+        DB_VKM_URL = get_database_url()
+        DB_VKM_CRED = get_database_cred()
         DB_TR_URL = credentials("DB_TR_URL")
         DB_TR_CRED = credentials("DB_TR_CRED")
         NOTIFY_SLACK_SUBJECT = "${JOB_NAME} - <${RUN_DISPLAY_URL}|${BUILD_DISPLAY_NAME}>"
