--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -25,7 +25,7 @@ pipeline {
     agent any
     environment {
         DB_VKM_URL = credentials("DB_VKM_TEST_URL")
-        DB_VKM_CRED = credentials("DB_VKM_TEST_URL")
+        DB_VKM_CRED = credentials("DB_VKM_TEST_CRED")
         DB_TR_URL = credentials("DB_TR_URL")
         DB_TR_CRED = credentials("DB_TR_CRED")
         NOTIFY_SLACK_SUBJECT = "${JOB_NAME} - <${RUN_DISPLAY_URL}|${BUILD_DISPLAY_NAME}>"
