--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -36,8 +36,10 @@ def get_db_cred() {
 pipeline {
     agent any
     environment {
-        DB_VKM_URL = credentials(${get_db_url()})
-        DB_VKM_CRED = credentials(${get_db_cred()})
+    	def vkm_url = get_db_url()
+    	def vkm_cred =  get_db_cred()
+        DB_VKM_URL = credentials(${vkm_url})
+        DB_VKM_CRED = credentials(${vkm_cred})
         DB_TR_URL = credentials("DB_TR_URL")
         DB_TR_CRED = credentials("DB_TR_CRED")
         NOTIFY_SLACK_SUBJECT = "${JOB_NAME} - <${RUN_DISPLAY_URL}|${BUILD_DISPLAY_NAME}>"
