--- a/ci/Jenkinsfile.service
+++ b/ci/Jenkinsfile.service
@@ -38,6 +38,8 @@ pipeline {
     environment {
     	def vkm_url = get_db_url()
     	def vkm_cred =  get_db_cred()
+    	echo vkm_url
+    	echo vkm_cred
         DB_VKM_URL = credentials(${vkm_url})
         DB_VKM_CRED = credentials(${vkm_cred})
         DB_TR_URL = credentials("DB_TR_URL")
