--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <swagger.version>2.9.0</swagger.version>
+    <swagger.version>2.9.2</swagger.version>
+    
   </properties>
 
   <dependencies>
@@ -36,8 +37,28 @@
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger2</artifactId>
         <version>${swagger.version}</version>
+       	<exclusions>
+			<exclusion>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-annotations</artifactId>
+			</exclusion>
+			<exclusion>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-models</artifactId>
+			</exclusion>
+		</exclusions>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+		<groupId>io.swagger</groupId>
+		<artifactId>swagger-annotations</artifactId>
+		<version>1.6.2</version>
+	</dependency>
+	<dependency>
+		<groupId>io.swagger</groupId>
+		<artifactId>swagger-models</artifactId>
+		<version>1.6.2</version>
+	</dependency>
     <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
