Added some clarifications in code

--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -4,6 +4,7 @@ fi.livi.vkm.jdbc.url=DB_VKM_URL
 fi.livi.vkm.jdbc.user=DB_VKM_CRED_USR
 fi.livi.vkm.jdbc.pass=DB_VKM_CRED_PSW
 
+#Näitä ei tarvita
 # jdbc.tr
 fi.livi.tr.jdbc.driverClassName=com.oracle.jdbc.pool.OracleDataSource
 fi.livi.tr.jdbc.tr.url=DB_TR_URL
