--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>fi.livi.vkm</groupId>
       <artifactId>vkm-core</artifactId>
-      <version>0.3.4</version>
+      <version>0.3.5-SNAPSHOT</version>
     </dependency>
 
     <dependency>
