Modified tests and changed the log file name

--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -18,5 +18,5 @@ fi.livi.vkm.hibernate.show_sql=false
 
 server.port = 8989
 server.context-path=/viitekehysmuunnin
-logging.file=./logs/viitekehysmuunnin.logJoo K
+logging.file=./logs/viitekehysmuunnin.log
 
