Changed logging from debug to info

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -38,7 +38,7 @@ appender.console.layout.pattern = %d{dd-MM-yyyy HH:mm:ss.SSS} [%-5level] %c{1} [
 #logger.file.appenderRefs = file
 #logger.file.appenderRef.file.ref = LOGFILE
 
-rootLogger.level = debug
+rootLogger.level = info
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
 
